# mingle

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  compose.yml  detector.tg  docker-compose.yml  drawE.py  gui.mac  menu.mac  mesh.mac  mingle.bat  mingle.cc  mingle.py  run.mac  tiny.cc  vis.mac
geant4/: Dockerfile
geant4/11.2.1/: Dockerfile  README.md
geant4/minimal/: Dockerfile
